force-app/main/default/objects/Account/fields/Cod_CAEN__c.field-meta.xml
<CustomField>
    <fullName>Cod_CAEN__c</fullName>
    <label>Cod CAEN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>