force-app/main/default/objects/Account/fields/Cod_client_Navision__c.field-meta.xml
<CustomField>
    <fullName>Cod_client_Navision__c</fullName>
    <label>Cod client Navision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>