force-app/main/default/objects/Account/fields/Contract_semnat__c.field-meta.xml
<CustomField>
    <fullName>Contract_semnat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract semnat</label>
    <type>Checkbox</type>
</CustomField>