force-app/main/default/objects/Account/fields/Data_instalare__c.field-meta.xml
<CustomField>
    <fullName>Data_instalare__c</fullName>
    <label>Data instalare</label>
    <type>Date</type>
</CustomField>