force-app/main/default/objects/Account/fields/Domeniu_de_activitate__c.field-meta.xml
<CustomField>
    <fullName>Domeniu_de_activitate__c</fullName>
    <label>Domeniu de activitate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>