force-app/main/default/objects/Account/fields/Email_adresa_de_corespondenta__c.field-meta.xml
<CustomField>
    <fullName>Email_adresa_de_corespondenta__c</fullName>
    <label>Email adresa de corespondenta</label>
    <type>Email</type>
</CustomField>