force-app/main/default/objects/Account/fields/Email_facturare_electronica__c.field-meta.xml
<CustomField>
    <fullName>Email_facturare_electronica__c</fullName>
    <label>Email facturare electronica</label>
    <type>Email</type>
</CustomField>