force-app/main/default/objects/Account/fields/Email_sediu_social__c.field-meta.xml
<CustomField>
    <fullName>Email_sediu_social__c</fullName>
    <label>Email sediu social</label>
    <type>Email</type>
</CustomField>