force-app/main/default/objects/Account/fields/Facturare_electronica__c.field-meta.xml
<CustomField>
    <fullName>Facturare_electronica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facturare electronica</label>
    <type>Checkbox</type>
</CustomField>