force-app/main/default/objects/Account/fields/Masina_de_Colorat__c.field-meta.xml
<CustomField>
    <fullName>Masina_de_Colorat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Masina de Colorat</label>
    <type>Checkbox</type>
</CustomField>