force-app/main/default/objects/Account/fields/Modalitate_plata__c.field-meta.xml
<CustomField>
    <fullName>Modalitate_plata__c</fullName>
    <label>Modalitate plata</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>OP</fullName>
            </value>
            <value>
                <fullName>IP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>