force-app/main/default/objects/Account/fields/Nume_client__c.field-meta.xml
<CustomField>
    <fullName>Nume_client__c</fullName>
    <label>Nume client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>