force-app/main/default/objects/Account/fields/Orar_receptie_marfa__c.field-meta.xml
<CustomField>
    <fullName>Orar_receptie_marfa__c</fullName>
    <label>Orar receptie marfa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>