force-app/main/default/objects/Account/fields/Platitor_TVA__c.field-meta.xml
<CustomField>
    <fullName>Platitor_TVA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Platitor TVA</label>
    <type>Checkbox</type>
</CustomField>