force-app/main/default/objects/Account/fields/POSM__c.field-meta.xml
<CustomField>
    <fullName>POSM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POSM</label>
    <type>Checkbox</type>
</CustomField>