force-app/main/default/objects/Account/fields/Program_Loializare__c.field-meta.xml
<CustomField>
    <fullName>Program_Loializare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Loializare</label>
    <type>Checkbox</type>
</CustomField>