force-app/main/default/objects/Account/fields/RO_J__c.field-meta.xml
<CustomField>
    <fullName>RO_J__c</fullName>
    <label>RO/J</label>
    <length>255</length>
    <type>Text</type>
</CustomField>