force-app/main/default/objects/Account/fields/Segment_Canal__c.field-meta.xml
<CustomField>
    <fullName>Segment_Canal__c</fullName>
    <label>Segment Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KA</fullName>
            </value>
            <value>
                <fullName>TT</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>