force-app/main/default/objects/Account/fields/Status_client__c.field-meta.xml
<CustomField>
    <fullName>Status_client__c</fullName>
    <label>Status client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activ</fullName>
            </value>
            <value>
                <fullName>Inactiv</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>