force-app/main/default/objects/Account/fields/Status_Financiar__c.field-meta.xml
<CustomField>
    <fullName>Status_Financiar__c</fullName>
    <label>Status Financiar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocat total</fullName>
            </value>
            <value>
                <fullName>Blocat la livrare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>