force-app/main/default/objects/Account/fields/Telefon__c.field-meta.xml
<CustomField>
    <fullName>Telefon__c</fullName>
    <label>Telefon</label>
    <type>Phone</type>
</CustomField>