force-app/main/default/objects/Account/fields/Tip_client__c.field-meta.xml
<CustomField>
    <fullName>Tip_client__c</fullName>
    <label>Tip client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PF</fullName>
            </value>
            <value>
                <fullName>PJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>