force-app/main/default/objects/Account/fields/Website_ecommerce__c.field-meta.xml
<CustomField>
    <fullName>Website_ecommerce__c</fullName>
    <label>Website ecommerce</label>
    <type>Url</type>
</CustomField>