force-app/main/default/objects/Account/fields/Website_firma__c.field-meta.xml
<CustomField>
    <fullName>Website_firma__c</fullName>
    <label>Website firma</label>
    <type>Url</type>
</CustomField>